--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
         <script src="sketch.js"></script>
         <script src="player.js"></script>
         <script src="block.js"></script>
+        <script src="collideable.js"></script>
     </body>
 </html>
