--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
     <body>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.js"></script>
         <script src="sketch.js"></script>
+        <script src="collide2D/p5.collide2d.js"></script>
         <script src="player.js"></script>
         <script src="block.js"></script>
-        <script src="collideable.js"></script>
+        <script src="collideable.js"></script
     </body>
 </html>
